--- a/Client/package.json
+++ b/Client/package.json
@@ -2,15 +2,20 @@
   "name": "workout-buddy",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:300/",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@mobiscroll/react-lite": "^4.10.9",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "5.0.1",
+    "@apollo/client": "^3.5.8",
+    "@stripe/stripe-js": "^1.3.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "graphql": "^14.6.0",
+    "jwt-decode": "^2.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
