--- a/Client/package.json
+++ b/Client/package.json
@@ -12,9 +12,11 @@
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
