update package json

--- a/Client/package.json
+++ b/Client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mern-client",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.17.1"
+  },
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
