--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "workout-buddy",
   "version": "1.0.0",
   "engines": {
-    "node": "16.17.1"
+    "node": "16.17.1",
+    "npm": ">=6.0.0"
   },
   "description": "",
   "main": "server/server.js",
