--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server/server.js --ignore client",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
