--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "16.17.1"
+    "node": "18.x",
+    "npm": "7.x"
   },
   "scripts": {
     "start": "node server.js",
