--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,7 @@
   "name": "mern-client",
   "version": "0.1.0",
   "engines": {
-    "node": "18.x",
-    "npm": "7.x"
+    "node": "16.17.1"
   },
   "private": true,
   "proxy": "http://localhost:3001/",
@@ -21,7 +20,7 @@
     "react-scripts": "4.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
