--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "workout-buddy",
   "version": "1.0.0",
   "engines": {
-    "node": "18.x",
-    "npm": "7.x"
+    "node": "16.17.1"
   },
   "description": "",
   "main": "server/server.js",
@@ -20,8 +19,5 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.3"
   }
 }
