--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "18.x",
-    "npm": "7.x"
+    "node": "16.17.1"
   },
   "scripts": {
     "start": "node server.js",
